@@ -6,27 +6,24 @@ import net.jbock.Converter;
 
 import javax.inject.Inject;
 import javax.lang.model.element.Element;
-import java.util.Collections;
 import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
-public class MapperProcessingStep implements BasicAnnotationProcessor.Step {
+/**
+ * Ensure that changes in the converter class trigger the processing.
+ */
+public class ConverterProcessingStep implements BasicAnnotationProcessor.Step {
 
   @Inject
-  MapperProcessingStep() {
+  ConverterProcessingStep() {
   }
 
   @Override
   public Set<String> annotations() {
-    return Stream.of(Converter.class)
-        .map(Class::getCanonicalName)
-        .collect(Collectors.toSet());
+    return Set.of(Converter.class.getCanonicalName());
   }
 
   @Override
   public Set<? extends Element> process(ImmutableSetMultimap<String, Element> elementsByAnnotation) {
-    // TODO check if each annotated element is referenced by some mappedBy attribute
-    return Collections.emptySet();
+    return Set.of();
   }
 }
